fix nav z-index issue; fix hover panel interactions

--- a/src/pages/Root/root.css
+++ b/src/pages/Root/root.css
@@ -39,4 +39,5 @@
 	position: absolute;
 	top: 0.75rem;
 	right: 0.75rem;
+	z-index: 900;
 }
